--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: A blog about Vincent Wang
 description: A blog about Data Science
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: "https://vincent9514.github.io/particle/" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Vincent Wang
