--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://vincent9514.github.io/particle/" # the base hostname & protocol fo
 
 # User settings
 username: Vincent Wang
-user_description: Master of Science in Analytics, Northwestern University
+user_description: Vincent is currently pursuing a Master Degree in Analytics at Northwestern University with emphasis on Predictive Analytics, Machine Learning, Deep Learning, Data Visualization, Databases & Information Retrieval, etc. He is passionate about combining the power of data science and wild creativity to solve real-world business challenges. Equipped with MSiA educational background and his professional experience in data science, consulting, and market research in automotive and aviation industries, he is actively seeking data scientist internship opportunities for the summer of 2018. Please contact Vincent at vincentwang2018@u.northwestern.edu.
 user_title: Data Scientist
 email: vincent_ziwen@outlook.com
 twitter_username: lorem_ipsum
