--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: A blog about Vincent Wang
-description: A blog about Data Science
+title: Vincent Wang
+description: Sr. Data Scientist - Cognitive Consultant @ IBM | Northwestern M.S. in Analytics | AWS and Azure Certified Practitioner
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 url: "https://vincent9514.github.io/particle/" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Vincent Wang
-user_description: Vincent is currently pursuing a Master Degree in Analytics at Northwestern University with emphasis on Predictive Analytics, Machine Learning, Deep Learning, Data Visualization, Databases & Information Retrieval, etc. He is passionate about combining the power of data science and wild creativity to solve real-world business challenges.
-user_title: Data Scientist
+user_description: Vincent is a senior data scientist in IBM services and advanced analytics practice in North America distribution-industry, helping IBM's clients embrace AI and Big Data capabilities. Vincent graduated from M.S. in Analytics at Northwestern University with emphasis on Predictive Analytics, Machine Learning, Deep Learning, Data Visualization, Databases & Information Retrieval, etc. He is passionate about combining the power of data science and wild creativity to solve real-world business challenges.
+user_title: Sr. Data Scientist - Cognitive Consultant @ IBM | Northwestern M.S. in Analytics | AWS and Azure Certified Practitioner
 email: vincent_ziwen@outlook.com
 twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
+github_username:  vincent9514
 gplus_username:  lorem_ipsum
 
 # Google-analytics
