updated title only

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Vincent Wang
-description: Sr. Data Scientist - Cognitive Consultant @ IBM | Northwestern M.S. in Analytics | AWS and Azure Certified Practitioner
+description: Sr. Data Scientist @ IBM | Northwestern M.S. in Analytics | AWS and Azure Certified Practitioner
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 url: "https://vincent9514.github.io/particle/" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
