--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://vincent9514.github.io/particle/" # the base hostname & protocol fo
 # User settings
 username: Vincent Wang
 user_description: Vincent is a senior data scientist in IBM services and advanced analytics practice in North America distribution-industry, helping IBM's clients embrace AI and Big Data capabilities. Vincent graduated from M.S. in Analytics at Northwestern University with emphasis on Predictive Analytics, Machine Learning, Deep Learning, Data Visualization, Databases & Information Retrieval, etc. He is passionate about combining the power of data science and wild creativity to solve real-world business challenges.
-user_title: Sr. Data Scientist - Cognitive Consultant @ IBM | Northwestern M.S. in Analytics | AWS and Azure Certified Practitioner
+user_title: Sr. Data Scientist @ IBM | Northwestern M.S. in Analytics | AWS and Azure Certified Practitioner
 email: vincent_ziwen@outlook.com
 twitter_username: lorem_ipsum
 github_username:  vincent9514
